analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/typeParameterOnAnonymousFunction.kt
val t3 = fun <<expr>T</expr>> () { }